// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-system-meta-card.vue should be rendered correctly 1`] = `
<div
  class="z-data-card-stub"
  title="システム情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
    label="ID"
    value="1"
  />
  <z-data-card-item-stub
    icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
    label="登録日時"
  >
    <time
      datetime="1986-03-23T12:47:49+0900"
    >
      1986年03月23日 12:47
    </time>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    label="更新日時"
  >
    <time
      datetime="2023-08-21T17:18:19+0900"
    >
      2023年08月21日 17:18
    </time>
  </z-data-card-item-stub>
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`z-system-meta-card.vue should be rendered correctly with id only 1`] = `
<div
  class="z-data-card-stub"
  title="システム情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
    label="ID"
    value="1"
  />
  <!---->
  <!---->
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`z-system-meta-card.vue should be rendered correctly without createdAt 1`] = `
<div
  class="z-data-card-stub"
  title="システム情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
    label="ID"
    value="1"
  />
  <!---->
  <z-data-card-item-stub
    icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
    label="更新日時"
  >
    <time
      datetime="2023-08-21T17:18:19+0900"
    >
      2023年08月21日 17:18
    </time>
  </z-data-card-item-stub>
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`z-system-meta-card.vue should be rendered correctly without updatedAt 1`] = `
<div
  class="z-data-card-stub"
  title="システム情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
    label="ID"
    value="1"
  />
  <z-data-card-item-stub
    icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
    label="登録日時"
  >
    <time
      datetime="1986-03-23T12:47:49+0900"
    >
      1986年03月23日 12:47
    </time>
  </z-data-card-item-stub>
  <!---->
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;
